fix: update contact label color for better visibility

--- a/style.scss
+++ b/style.scss
@@ -348,7 +348,7 @@ footer {
 
 .contact-label {
   font-weight: 600;
-  color: $slate;
+  color: $gray;
 }
 
 .contact-email {
